<resources>
    <string name="app_name">Ersaal</string>
    <string name="no_internet">No Internet Available</string>
    <string name="alert_description">Alert</string>
    <string name="dash">-</string>
    <string name="alert_text">Alert</string>
    <string name="ok_text">OK</string>
    <string name="connection_time_out" translatable="false">Connection Time out</string>
    <string name="error_msg">Empty or invalid string</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="sign_in">Sign In</string>
    <string name="we_re_happy">We\'re happy to see you again. To Use your account, log in first.</string>
    <string name="some_id">+92</string>
    <string name="dumy_no">3XX XXXXXXX</string>
    <string name="i_agree_to">I agree to</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="continue_">Continue</string>
    <string name="or">or</string>
    <string name="sign_in_with_email">Sign In with Email</string>
    <string name="sign_in_with_facebook">Sign In with Facebook</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_email">Sign Up with Email</string>
    <string name="sign_up_with_facebook">Sign up with Facebook</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="last_updated_on_23_04_2023">Last updated on 23/04/2023.</string>
    <string name="accept_continue"><![CDATA[Accept & Continue]]></string>
    <string name="enter_your_otp_below">Enter Your OTP below</string>
    <string name="an_otp_has_been_sent_to">An OTP has been sent to</string>
    <string name="_0301">0301-******</string>
    <string name="number">number</string>
    <string name="create_folder_">Create Folder</string>
    <string name="home">Home</string>
    <string name="scheduler">Scheduler</string>
    <string name="recents">Recents</string>
    <string name="settings">Settings</string>
    <string name="folder_name">Folder Name</string>
    <string name="add_contacts">Add Contacts</string>
</resources>