<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_unselected"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_scheduler"
        android:icon="@drawable/schedular"
        android:title="@string/scheduler" />

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/home_unselected"
        android:title="Create"/>

    <item
        android:id="@+id/navigation_recents"
        android:icon="@drawable/recent"
        android:title="@string/recents" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />


</menu>