<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bg"
    tools:context=".core.ui.activities.SignInActivity">


    <TextView
        android:id="@+id/sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/objective_medium"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/we_re_happy"
        android:layout_width="256dp"
        android:layout_height="36dp"
        android:fontFamily="@font/objective_regular"
        android:gravity="top"
        android:text="@string/we_re_happy"
        android:textColor="@color/grey"
        android:textSize="@dimen/_8sdp"
        app:layout_constraintStart_toStartOf="@id/sign_in"
        app:layout_constraintTop_toBottomOf="@id/sign_in" />

    <RelativeLayout
        android:id="@+id/countryCodeCover"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_42sdp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_23sdp"
        android:background="@drawable/shape_rectangle_grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/we_re_happy">

        <TextView
            android:id="@+id/countryCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:letterSpacing="0.02"
            android:text="@string/some_id"
            android:textColor="@color/grey_100"
            android:textSize="@dimen/_14sdp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/dash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_toEndOf="@id/countryCodeCover"
        android:letterSpacing="0.02"
        android:text="@string/dash"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintBottom_toBottomOf="@id/countryCodeCover"
        app:layout_constraintStart_toEndOf="@id/countryCodeCover"
        app:layout_constraintTop_toTopOf="@id/countryCodeCover" />

    <AutoCompleteTextView
        android:id="@+id/edtSearchViewSeed"
        android:layout_width="0dp"
        android:layout_height="@dimen/_42sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:background="@drawable/shape_rectangle_grey"
        android:completionThreshold="2"
        android:drawablePadding="8dp"
        android:hint="@string/dumy_no"
        android:imeOptions="actionSearch"
        android:includeFontPadding="false"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/_8sdp"
        android:popupBackground="@drawable/shape_rectangle_grey"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_100"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dash"
        app:layout_constraintTop_toTopOf="@id/countryCodeCover" />

    <LinearLayout
        android:id="@+id/termsConditionBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="59dp"
        android:layout_marginTop="@dimen/_30sdp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryCodeCover">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp" />

        <TextView
            android:id="@+id/agree"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/objective_medium"
            android:text="@string/i_agree_to"
            android:textColor="@color/grey"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/objective_medium"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/shape_rectangle_yellow_round"
        android:clickable="false"
        android:fontFamily="@font/objective_regular"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/termsConditionBox" />

    <LinearLayout
        android:id="@+id/lineBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnContinue"
        android:layout_marginStart="53dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="53dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="@id/btnContinue"
        app:layout_constraintStart_toStartOf="@id/btnContinue"
        app:layout_constraintTop_toBottomOf="@id/btnContinue">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.45"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/or"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0.1"
            android:fontFamily="@font/objective_medium"
            android:text="@string/or"
            android:textColor="@color/grey"
            android:textSize="@dimen/_10sdp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.45"
            android:background="@color/grey" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:background="@drawable/shape_rectangle_border_grey"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/btnContinue"
        app:layout_constraintStart_toStartOf="@id/btnContinue"
        app:layout_constraintTop_toBottomOf="@id/lineBox">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/baseline_email_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/objective_regular"
            android:text="@string/sign_in_with_email"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llFb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:background="@drawable/shape_rectangle_border_grey"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/llEmail"
        app:layout_constraintStart_toStartOf="@id/llEmail"
        app:layout_constraintTop_toBottomOf="@id/llEmail">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/facebook_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/objective_regular"
            android:text="@string/sign_in_with_facebook"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:background="@drawable/shape_rectangle_border_grey"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="@id/llFb"
        app:layout_constraintStart_toStartOf="@id/llFb"
        app:layout_constraintTop_toBottomOf="@id/llFb">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/google_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/objective_regular"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/signUpCover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/llGoogle"
        app:layout_constraintStart_toStartOf="@id/llGoogle"
        app:layout_constraintTop_toBottomOf="@id/llGoogle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/objective_medium"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/grey"
            android:textSize="@dimen/_8sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/objective_medium"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/_8sdp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>